Fix some lower-upper case reference issues

--- a/group.html
+++ b/group.html
@@ -8,7 +8,7 @@
     <tbody>
     <tr>
         <td style="vertical-align: top; width: 102px;">
-            <a href="index.html"><img style="border: 0px solid ; width: 100px; height: 75px;" alt="Home" src="images/Home.png"></a><br>
+            <a href="index.html"><img style="border: 0px solid ; width: 100px; height: 75px;" alt="Home" src="images/home.png"></a><br>
             <a href="research.html"><img style="border: 0px solid ; width: 100px; height: 75px;" alt="Research" src="images/research.png"></a><br>
             <a href="teaching.html"><img style="border: 0px solid ; width: 100px; height: 75px;" alt="Teaching" src="images/teaching.png"></a><br>
             <a href="group.html"><img style="border: 0px solid ; width: 100px; height: 75px;" alt="Group" src="images/group.png"></a><br>
