--- a/research.html
+++ b/research.html
@@ -7,14 +7,14 @@
     <table style="text-align: left; width: 981px; height: 612px;" cellspacing="2" cellpadding="2" border="0">
     <tbody>
     <tr>
-    <td style="vertical-align: top; width: 102px;">
-        <a href="index.html"><img style="border: 0px solid ; width: 100px; height: 75px;" alt="Home" src="images/Home.png"></a><br>
-        <a href="research.html"><img style="border: 0px solid ; width: 100px; height: 75px;" alt="Research" src="images/research.png"></a><br>
-        <a href="teaching.html"><img style="border: 0px solid ; width: 100px; height: 75px;" alt="Teaching" src="images/teaching.png"></a><br>
-        <a href="group.html"><img style="border: 0px solid ; width: 100px; height: 75px;" alt="Group" src="images/group.png"></a><br>
-        <a href="publications.html"><img style="border: 0px solid ; width: 100px; height: 75px;" alt="Publications" src="images/publications.png"></a><br>
-        <a href="advising.html"></a><br>
-    </td>
+        <td style="vertical-align: top; width: 102px;">
+            <a href="index.html"><img style="border: 0px solid ; width: 100px; height: 75px;" alt="Home" src="images/home.png"></a><br>
+            <a href="research.html"><img style="border: 0px solid ; width: 100px; height: 75px;" alt="Research" src="images/research.png"></a><br>
+            <a href="teaching.html"><img style="border: 0px solid ; width: 100px; height: 75px;" alt="Teaching" src="images/teaching.png"></a><br>
+            <a href="group.html"><img style="border: 0px solid ; width: 100px; height: 75px;" alt="Group" src="images/group.png"></a><br>
+            <a href="publications.html"><img style="border: 0px solid ; width: 100px; height: 75px;" alt="Publications" src="images/publications.png"></a><br>
+            <a href="advising.html"></a><br>
+      </td>
     <td style="vertical-align: top; width: 1504px;">
     <h1><span style="color: red; font-family: Calibri;">Research Interests<a name="top"></a></span></h1>
     <p style="text-align: justify; font-family: Calibri;"><big><font size="2"><big>My research interests lie on the
