Light housekeeping. Making lab aware of the new site, so we can get their descriptions and photos

--- a/_pages/research.html
+++ b/_pages/research.html
@@ -31,29 +31,31 @@ author_profile: true
     systems biology that are essentially engineering problems, and require
     engineering mindset to solve.</big></font></big></p>
     <p style="text-align: justify; font-family: Calibri;"><big><font size="2"><big>Several areas that I have been working
-    on are listed below (click to go to the subject).</big></font></big></p>
+    on are listed below.</big></font></big></p>
+    
     <ul style="font-family: Calibri;">
     <li>
     <p style="text-align: justify;"><a href="#gene%20network">Networks in molecular biology</a>
     </p>
     </li>
+
     <li>
     <p style="text-align: justify;"><a href="#microbio">Microbiorobotics</a></p>
     </li>
+
     <li>
-    <p><a href="#human">Human-powered formal
-    controller synthesis</a><big><font size="2"><big><span style="color: rgb(51, 51, 255);"></span></big></font></big></p>
+    <p style="text-align: justify;"><a href="#human">Human-powered formal controller synthesis</a></p>
     </li>
-    <li style="color: black;">
-    <p><big> </big><big> <font size="2"><big><a href="#abstract">Abstraction
-    of complex hybrid systems and its applications</a>&nbsp;<span style="color: rgb(51, 51, 255);"></span></big></font></big></p>
+
+    <li>
+    <p style="text-align: justify;"><a href="#abstract">Abstraction of complex hybrid systems and its applications</a></p>
     </li>
-    <li style="color: black;">
-    <p><big> </big><big> <font size="2"><big><a href="#theoretic">Theoretical
-    research on the interface between systems theory, computer
-    science and systems biology</a>&nbsp;<span style="color: rgb(51, 51, 255);"></span></big></font></big></p>
+
+    <li>
+    <p style="text-align: justify;"><a href="#theoretic">Theoretical research on the interface between systems theory, computer science and systems biology</a></p>
     </li>
     </ul>
+
     <p style="text-align: justify; font-family: Calibri;"><font style="font-weight: bold;" size="2" color="#808000"><big style="font-family: Calibri;"><span style="color: black;">I
     gratefully acknowledge</span></big> </font><span style="font-weight: bold;">the institutions below for
     supporting and sponsoring my research:</span><br>
@@ -121,7 +123,7 @@ author_profile: true
     Zavlanos, S.P. Boyd, G.J. Pappas, Genetic network identification using
     convex programming,<span style="font-style: italic;"> IET
     Systems Biology</span>, vol. 5(3), pp. 155-166, 2009.</big></font></big></p>
-    <p style="text-align: justify; font-family: Calibri;"><big><a href="#top">back to top</a></big></p>
+    <p style="text-align: justify; font-family: Calibri;"><big><a href="#">back to top</a></big></p>
     <p style="text-align: justify;"><big><big><span style="font-family: Calibri; color: maroon; font-weight: bold;">Microbiorobotics</span></big></big><a name="microbio"></a></p>
     <img style="float: left; width: 259px; height: 255px;" alt="Microbiorobot" src="/images/microbiorobotics.png" hspace="5"><big><font style="font-family: Calibri;" size="2"><big>The
     idea of using microorganisms as actuators for microscale structures is
@@ -191,7 +193,7 @@ author_profile: true
     A.A. Julius, M.J. Kim, V. Kumar, G.J. Pappas, Modeling, control and
     experimental characterization of microbiorobots, <span style="font-style: italic;">International Journal of
     Robotics Research</span>, Vol. 30(6), pp. 647-658, 2011.</big></font></big></p>
-    <p style="text-align: justify; font-family: Calibri;"><big><a href="Research.html#top">back to top</a></big></p>
+    <p style="text-align: justify; font-family: Calibri;"><big><a href="#">back to top</a></big></p>
     <big><big><span style="color: maroon; font-weight: bold; font-family: Calibri;">Human
     Powered Controller Synthesis<a name="human"></a></span></big></big><big><font style="font-family: Calibri;" size="2"><big><br>
     </big></font></big><big style="font-family: Calibri;"><font size="2"><big>Hybrid
@@ -256,7 +258,7 @@ author_profile: true
     continuous dynamics, in the <span style="font-style: italic;">Proc.
     6th IEEE Conf. Automation Science and Engineering</span>, pp.
     1007 - 1012, Toronto, Canada, 2010.</big></font></big></p>
-    <p style="text-align: justify; font-family: Calibri;"><big><a href="Research.html#top">back to top</a></big></p>
+    <p style="text-align: justify; font-family: Calibri;"><big><a href="#">back to top</a></big></p>
     <big style="font-weight: bold; color: rgb(102, 0, 0);"><big><br style="font-family: Calibri;">
     <span style="font-family: Calibri;">Abstraction of
     Complex Hybrid Systems and Its Applications</span></big></big><a name="abstract"></a><br>
@@ -308,7 +310,7 @@ author_profile: true
     of stochastic hybrid automata, in <span style="font-style: italic;">Hybrid
     Systems: Computation and Control</span>, vol. 3927 of LNCS,
     Springer Verlag, 2006, pp. 318 - 332.</big></font></big></p>
-    <p style="text-align: justify; font-family: Calibri;"><big><a href="Research.html#top">back to top</a></big></p>
+    <p style="text-align: justify; font-family: Calibri;"><big><a href="#">back to top</a></big></p>
     <p style="text-align: justify; font-family: Calibri;"></p>
     <p style="margin-top: 0pt; margin-bottom: 0pt;"><b>
     <font size="3" color="#800000"><big><big><span style="font-family: Calibri;">Theoretical research on the
@@ -351,7 +353,7 @@ author_profile: true
     behavioral perspective</i>, PhD thesis, University of Twente, The
     Netherlands, February 2005.</big></font></big></p>
     <p style="margin-top: 0pt; margin-bottom: 0pt; font-family: Calibri;"><big>&nbsp;</big></p>
-    <big><a href="Research.html#top">back to top</a></big>
+    <big><a href="#">back to top</a></big>
     <p style="text-align: justify; font-family: Calibri;"></p>
     <p style="text-align: justify; font-family: Calibri;"></p>
     <big><font style="font-family: Calibri;" size="2"><big><br>
