--- a/_pages/research.html
+++ b/_pages/research.html
@@ -157,7 +157,7 @@ author_profile: true
     swimmer is being controlled to trace the letters "R D", which are the
     initials of Rensselaer and Drexel.<br>
     </big></font></big><br>
-    <iframe src="http://www.youtube.com/embed/I1cFi7RtsD0" allowfullscreen="" width="420" height="315" frameborder="0"></iframe>
+    <iframe src="http://www.youtube.com/embed/I1cFi7RtsD0" allowfullscreen width="420" height="315" frameborder="0"></iframe>
     <br>
     <br>
     This material is based upon work supported by the National Science
@@ -232,8 +232,7 @@ author_profile: true
     pendulum control problem. <br>
     <br>
     </span>
-    <iframe src="http://www.youtube.com/embed/MlDfNpxqEpY" allowfullscreen="" width="420" height="315" frameborder="0"></iframe><br>
-    <br>
+    <iframe src="http://www.youtube.com/embed/MlDfNpxqEpY" allowfullscreen="" width="420" height="315" frameborder="0"></iframe>
     This material is based upon work supported by the<a href="NSF1218109.html"> National Science
     Foundation under Grant No. 1218109</a>. Any opinions,
     findings, and
